--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "flowbite-react": "^0.11.8",
     "framer-motion": "^12.14.0",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.0",
